--- a/notebooks/qualitative_maps.ipynb
+++ b/notebooks/qualitative_maps.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import geopandas as gpd\n",
-    "\n",
-    "%matplotlib inline"
+    "import geopandas as gpd"
    ]
   },
   {
@@ -212,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
